# renzu

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.infra.yml  docker-compose.yml  pyproject.toml
.claude/: session-start.sh  settings.json
.claude/agents/: ito-general.md  ito-quick.md  ito-thinking.md
.claude/commands/: ito-apply.md  ito-list.md  ito-project-setup.md  ito-proposal.md  ito.md
.claude/hooks/: ito-audit.sh
.claude/skills/ito-commit/: SKILL.md
.claude/skills/ito-subagent-driven-development/: code-quality-reviewer-prompt.md
.claude/skills/ito-systematic-debugging/: CREATION-LOG.md
.claude/skills/ito-writing-skills/: testing-skills-with-subagents.md
.codex/commands/: ito-project-setup.md
.codex/instructions/: ito-audit.md  ito-skills-bootstrap.md
.codex/prompts/: ito-archive.md  ito-research.md
.codex/skills/ito/: SKILL.md
.codex/skills/ito-archive/: SKILL.md
.codex/skills/ito-brainstorming/: SKILL.md
.codex/skills/ito-list/: SKILL.md
.codex/skills/ito-research/: SKILL.md
.codex/skills/ito-systematic-debugging/: SKILL.md
.codex/skills/ito-tasks/: SKILL.md
.codex/skills/ito-using-git-worktrees/: SKILL.md
.github/agents/: ito-general.md  ito-quick.md  ito-thinking.md
.github/prompts/: ito-review.prompt.md
.github/skills/ito-using-ito-skills/: SKILL.md
.github/skills/ito-write-change-proposal/: SKILL.md
.github/skills/ito-writing-skills/: SKILL.md
.github/workflows/: copilot-setup-steps.yml
.ito/: .gitignore  AGENTS.md  config.json  user-guidance.md
.ito/.state/audit/: events.jsonl
.ito/changes/001-01_project-scaffold/: proposal.md  tasks.md
.ito/changes/001-02_config-and-health/: proposal.md  tasks.md
.ito/changes/002-01_infra-compose/: proposal.md  tasks.md
.ito/changes/003-01_qdrant-client/: proposal.md  tasks.md
.ito/changes/003-02_file-walker/: proposal.md  tasks.md
.ito/changes/003-03_tree-sitter-chunker/: proposal.md  tasks.md
.ito/changes/003-04_embedding-provider/: design.md  proposal.md  tasks.md
.ito/changes/003-05_indexing-pipeline/: proposal.md  tasks.md
.ito/changes/003-06_ollama-provider/: design.md  proposal.md  tasks.md
.ito/changes/004-01_semantic-search/: proposal.md  tasks.md
.ito/changes/004-02_snippet-fetch/: proposal.md  tasks.md
.ito/changes/005-01_glass-client/: design.md  proposal.md  tasks.md
.ito/changes/005-02_glass-tools/: proposal.md  tasks.md
.ito/changes/006-01_mcp-server/: proposal.md  tasks.md
.ito/changes/006-02_mcp-retrieval-tools/: proposal.md  tasks.md
.ito/changes/006-03_mcp-glass-tools/: proposal.md  tasks.md
.ito/changes/007-01_http-routes/: proposal.md  tasks.md
.ito/changes/008-01_scip-parser/: proposal.md  tasks.md
.ito/changes/008-02_scip-chunker/: proposal.md  tasks.md
.ito/changes/009-01_full-compose/: proposal.md  tasks.md
.ito/changes/010-01_zoekt-client/: proposal.md  tasks.md
.ito/changes/010-02_zoekt-indexer/: proposal.md  tasks.md
.ito/changes/010-03_zoekt-tools/: proposal.md  tasks.md
.ito/changes/011-01_renzu-web-client/: README.md  design.md  proposal.md  tasks.md
.ito/modules/001_core/: module.md
.ito/modules/002_docker-infra/: module.md
.ito/modules/003_indexing/: module.md
.ito/modules/004_retrieval/: module.md
.ito/modules/005_glass/: module.md
.ito/modules/006_mcp/: module.md
.ito/modules/007_http-api/: module.md
.ito/modules/008_scip/: module.md
.ito/modules/009_docker-full/: module.md
.ito/planning/: STATE.md
.ito/user-prompts/: apply.md  guidance.md  proposal.md  tasks.md
.opencode/: opencode.json
.opencode/agent/: ito-quick.md  test-runner.md
.opencode/commands/: ito-project-setup.md
.opencode/plugins/: ito-skills.js
docker/: code-context.Dockerfile  compose.dev.yml  compose.prod.yml  compose.yml  infra-compose.yml
docker/glass-stub/: server.py
docs/: code_rag_prd.md
mcp-cli/: SKILL.md  renzu-mcp-cli.py
src/app/: __init__.py  cli.py  dependencies.py  logging_config.py  main.py
tests/: conftest.py
tests/integration/: test_file_walker_integration.py  test_glass_client_integration.py  test_glass_routes_integration.py  test_indexing_pipeline_integration.py  test_mcp_server_integration.py  test_ollama_embedder_integration.py  test_openai_embedder_integration.py  test_openai_embedder_live.py  test_qdrant_client_integration.py  test_scip_chunker_integration.py  test_search_service_integration.py  test_snippet_routes_integration.py  test_zoekt_indexer_integration.py
tests/unit/: test_api_routes.py  test_chunker.py  test_embedder.py  test_file_walker.py  test_glass_client.py  test_glass_service.py  test_indexing_pipeline.py  test_main.py  test_mcp_server.py  test_qdrant_client.py  test_scip_chunker.py  test_scip_parser.py  test_search_service.py  test_snippet_service.py  test_zoekt_client.py  test_zoekt_indexer.py
web-client/: Dockerfile  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
web-client/src/: index.css  main.tsx  router.tsx
(+94 files in other folders)
